--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "jest-html": "jest-html"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +29,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "less-watch-compiler": "^1.13.0"
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "jest-html": "^1.5.0",
+    "less-watch-compiler": "^1.13.0",
+    "react-test-renderer": "^16.8.2"
   }
 }
