--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "snapshotSerializers": [
+      "jest-html"
+    ]
+  },
   "devDependencies": {
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
